--- a/Desafio 10 parte 2/index.html
+++ b/Desafio 10 parte 2/index.html
@@ -17,7 +17,7 @@
     <nav>
         <a href="">Home.</a>
         <a href="">Notícias</a>
-        <a href="">Curiosidades</a>
+        <a href="">Curiosidades</a> 
         <a href="">Fale Conosco</a>
     </nav>
 
@@ -35,7 +35,7 @@
         <picture>
             <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png">
             <img src="imagens/dan-droids.png" alt="Imagem primeiros androids">
-        </img></picture>
+        </picture>
 
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
